plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = '1.6.6'
group = 'com.aidan99davis.spectrobesmod'

ext {
    minecraft_version = '1.21.1'
    minecraft_version_range = '[1.21.1,1.22)'

    neo_version = '21.1.233'
    loader_version_range = '[4,)'

    parchment_minecraft_version = '1.21.1'
    parchment_mappings_version = '2024.11.17'

    mod_id = 'spectrobesmod'
    mod_name = 'Spectrobes Mod'
    mod_license = 'All Rights Reserved'
    mod_authors = 'spectrobes-mod-team'
    mod_description = 'Spectrobes mod.'

    geckolib_version = '4.8.3'
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println("Java: ${System.getProperty('java.version')} JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')}) Arch: ${System.getProperty('os.arch')}")

sourceSets.main.resources {
    srcDir 'src/generated/resources'

    exclude '**/*.bbmodel'
    exclude 'src/generated/**/.cache'
}

repositories {
    mavenCentral()

    maven {
        name = 'NeoForged'
        url = 'https://maven.neoforged.net/releases'
    }

    maven {
        name = 'GeckoLib'
        url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup 'software.bernie.geckolib'
        }
    }

    maven {
        name = 'TheIllusiveC4'
        url = 'https://maven.theillusivec4.top/'
    }

    maven {
        name = 'BlameJared'
        url = 'https://maven.blamejared.com/'
    }

    maven {
        name = 'CurseMaven'
        url = 'https://cursemaven.com'
    }

    maven {
        name = 'Shedaniel'
        url = 'https://maven.shedaniel.me/'
    }
}

neoForge {
    version = neo_version

    validateAccessTransformers = true

    parchment {
        minecraftVersion = parchment_minecraft_version
        mappingsVersion = parchment_mappings_version
    }

    if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
        accessTransformers = files('src/main/resources/META-INF/accesstransformer.cfg')
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        data {
            data()

            programArguments.addAll(
                    '--mod', mod_id,
                    '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
            )
        }

        configureEach {
            gameDirectory = project.file('run')

            systemProperty 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "software.bernie.geckolib:geckolib-neoforge-1.21.1:${geckolib_version}"
}

tasks.withType(ProcessResources).configureEach {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : project.version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

jar {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.version,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }

    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}